fixed event text overflow

--- a/src/app/events/Events.module.css
+++ b/src/app/events/Events.module.css
@@ -15,6 +15,7 @@
   justify-content: right;
   align-items: flex-end;
   flex-shrink: 0;
+  overflow: hidden;
   border-radius: 5px;
   background: #EBEBEB;
   color: #000;
@@ -39,6 +40,9 @@
   padding: 2%;
   font-size: 0.8rem;
   font-family: sans-serif;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   cursor: pointer;
 }
 
